--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ AUTOMAKE_OPTIONS = subdir-objects
 EXTRA_DIST = M4/lrint.m4 M4/lrintf.m4 doc/index.html doc/sweep.png $(man_MANS)
 
 bin_PROGRAMS = src/sndfile-generate-chirp src/sndfile-spectrogram \
-	src/sndfile-mix-to-mono src/sndfile-jackplay src/sndfile-resample
+	src/sndfile-mix-to-mono src/sndfile-jackplay src/sndfile-resample \
+	src/sndfile-beat-detect
 
 # Test programs or programs not yet working.
 noinst_PROGRAMS = src/kaiser_window_test src/sndfile-pitch-infer
@@ -37,8 +38,17 @@ src_sndfile_jackplay_LDADD = $(SNDFILE_LIBS) $(JACK_LIBS)
 src_sndfile_resample_SOURCES = src/resample.c
 src_sndfile_resample_LDADD = $(SNDFILE_LIBS) $(SAMPLERATE_LIBS)
 
+src_sndfile_beat_detect_SOURCES = src/beat-detect.c src/common.h src/fir_hilbert_coeffs.h
+src_sndfile_beat_detect_LDADD = $(SNDFILE_LIBS)
+
 src_sndfile_pitch_infer_SOURCES = src/pitch-infer.c src/window.c src/common.c
 src_sndfile_pitch_infer_LDADD = $(SNDFILE_LIBS) $(FFTW3_LIBS)
+
+#=========================================================================================
+# The bin targets.
+
+src/fir_hilbert_coeffs.h : Scripts/calc-hilbert-fir.m
+	$+ $@
 
 #=========================================================================================
 # The make check targets.
